--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <section id="header">
     <header class="major">
         <h1>石大易班发展中心</h1>
+        <p>制作人：陈奕浩、付振宇、王泽涛</p>
         <p>“石大易班”是中国石油大学（华东）依托教育部<a href="http://www.yiban.cn/">“易班网”</a>建设而成的学生综合互动社区。</p>
         <p>石大易班</p>
     </header>
