图片滚动未完成,信息编辑部部门分工

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/style-xlarge.css"/>
     </noscript>
+    <link rel="stylesheet" type="text/css" href="css/MyStyle.css"/>
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="css/ie/v8.css"/><![endif]-->
     <!--[if lte IE 9]>
@@ -47,7 +48,7 @@
 <!-- One -->
 <section id="one" class="main special">
     <div class="container">
-        <span class="image fit primary"><img src="images/pic01.jpg" alt=""/></span>
+
 
         <div class="content">
             <header class="major">
@@ -71,7 +72,7 @@
 <!-- Two -->
 <section id="two" class="main special">
     <div class="container">
-        <span class="image fit primary"><img src="images/pic02.jpg" alt=""/></span>
+
 
         <div class="content">
             <header class="major">
@@ -109,7 +110,7 @@
 <!-- Three -->
 <section id="three" class="main special">
     <div class="container">
-        <span class="image fit primary"><img src="images/pic03.jpg" alt=""/></span>
+
 
         <div class="content">
             <header class="major">
@@ -128,7 +129,7 @@
 <!-- Four -->
 <section id="four" class="main special">
     <div class="container">
-        <span class="image fit primary"><img src="images/pic01.jpg" alt=""/></span>
+
 
         <div class="content">
             <header class="major">
@@ -144,7 +145,7 @@
 <!-- Five -->
 <section id="five" class="main special">
     <div class="container">
-        <span class="image fit primary"><img src="images/pic02.jpg" alt=""/></span>
+
 
         <div class="content">
             <header class="major">
@@ -160,7 +161,7 @@
 <!-- Six -->
 <section id="six" class="main special">
     <div class="container">
-        <span class="image fit primary"><img src="images/pic03.jpg" alt=""/></span>
+
 
         <div class="content">
             <header class="major">
@@ -207,29 +208,68 @@
 <!-- Seven -->
 <section id="seven" class="main special">
     <div class="container">
-        <span class="image fit primary"><img src="images/pic01.jpg" alt=""/></span>
+
 
         <div class="content">
             <header class="major">
                 <h2>信息编辑部</h2>
             </header>
             <p>负责石大易班文字、影像的采写编辑。</p>
+            <table class="alt">
+                <thead>
+                <caption><h1>信息编辑部部门内部分工</h1></caption>
+                <tr>
+                    <th>职务</th>
+                    <th>成员</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>部长</td>
+                    <td>王玉莹</td>
+                </tr>
+                <tr>
+                    <td>编辑</td>
+                    <td>陈映翰&nbsp潘美旭&nbsp梁良媛<br/>
+                        郝洁&nbsp 潘一鸣 &nbsp张林静
+                    </td>
+                </tr>
+                <tr>
+                    <td>摄影</td>
+                    <td>黄见智</td>
+                </tr>
+                <tr>
+                    <td>推文责编</td>
+                    <td>王玉莹</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
-        <a href="#eight" class="goto-next scrolly">Next</a>
     </div>
 </section>
 
 <!-- Eight -->
 <section id="eight" class="main special">
     <div class="container">
-        <span class="image fit primary"><img src="images/pic02.jpg" alt=""/></span>
+
 
         <div class="content">
             <header class="major">
                 <h2>活动照片</h2>
             </header>
-            <p><span class="image left"><img src="images/pic05.jpg" alt=""/></span></p>
-            <p><span class="image right"><img src="images/pic05.jpg" alt=""/></span</p>
+            <div id="photo-list">
+                <ul id="scroll">
+                    <li><a href="#"><img src="images/pic09.jpg" width="100px" height="100px" alt=""/></a></li>
+                    <li><a href="#"><img src="images/pic10.jpg" width="100px" height="100px" alt=""/></a></li>
+                    <li><a href="#"><img src="images/pic11.jpg" width="100px" height="100px" alt=""/></a></li>
+                    <li><a href="#"><img src="images/pic12.jpeg" width="100px" height="100px" alt=""/></a></li>
+                    <li><a href="#"><img src="images/pic13.jpg" width="100px" height="100px" alt=""/></a></li>
+                    <li><a href="#"><img src="images/pic08.jpg" width="100px" height="100px" alt=""/></a></li>
+                    <li><a href="#"><img src="images/pic07.jpg" width="100px" height="100px" alt=""/></a></li>
+                    <li><a href="#"><img src="images/pic06.jpg" width="100px" height="100px" alt=""/></a></li>
+                </ul>
+                <script type="text/javascript" src="MoveEffect.js"></script>
+                </div>
         </div>
         <a href="#footer" class="goto-next scrolly">Next</a>
     </div>
