--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@
             </section>
         </div>
     </div>
+    <div class="12u"><span class="image fit"><img src="images/pic17.JPG" alt=""></span></div>
+    <a href="#six" class="goto-next scrolly">Next</a>
 </section>
 
 <!-- Eight -->
