--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             </section>
         </div>
         <div class="12u"><span class="image fit"><img src="images/pic17.JPG" alt=""></span></div>
-        <a href="#six" class="goto-next scrolly">Next</a>
+        <a href="#eight" class="goto-next scrolly">Next</a>
     </div>
 
 </section>
