添加一些文字描述。

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <section id="header">
     <header class="major">
         <h1>石大易班发展中心</h1>
-
-        <p>“石大易班”是中国石油大学（华东）依托教育部<a href="http://www.yiban.cn/">“易班网”</a>建设而成的学生综合互动社区。</p>
+        <p><a href="http://www.yiban.cn/school/index/id/5370538">“石大易班”</a>是中国石油大学（华东）依托教育部<a href="http://www.yiban.cn/">“易班网”</a>建设而成的学生综合互动社区。</p>
+        <p>易班网是高校教育教学，生活服务，文化娱乐的综合性互动社区，为在校师生提供主页定制，在线学习，活动发布，兴趣交友等教育信息化一站式服务功能。</p>
     </header>
     <div class="container">
         <ul class="actions">
@@ -64,7 +64,6 @@
                 already developed into a multi-disciplinary,
                 well-rounded university focusing on petroleum and engineering.
             </p>
-
             <p><strong>是不是很高大上呢？下面才是我们的正题，介绍石大易班团队！</strong></p>
         </div>
         <a href="#two" class="goto-next scrolly">Next</a>
@@ -79,6 +78,8 @@
             <header class="major">
                 <h2>Our Team</h2>
             </header>
+            <p><b>金秋九月，海风送来相识的气息，10月18日，中国石油大学（华东）易班团队正式成立，开启了一段共同实现教育梦想的旅途
+            。青春似梦，岁月如歌，一群怀揣理想的青年以易班网为帆，扬帆起航！</b></p>
             <div class="12u"><span class="image fit"><img src="images/pic08.JPG" alt=""></span></div>
             <p><strong>石大易班团队分为以下几个部门</strong></p>
             <h3><a href="#three" class="button small">主席团</a></h3>
@@ -264,7 +265,6 @@
             <p>负责石大易班的开发及美工设计。</p>
             <section>
                 <h4>部门分工</h4>
-
                 <div class="table-wrapper">
                     <table class="alt">
                         <thead>
@@ -310,7 +310,6 @@
             <p>负责石大易班文字、影像的采写编辑。</p>
             <section>
                 <h4>部门分工</h4>
-
                 <div class="table-wrapper">
                     <table class="alt">
                         <thead>
@@ -367,8 +366,22 @@
                     <li><a href="#"><img src="images/pic06.jpg" width="100px" height="100px" alt=""/></a></li>
                 </ul>
                 <script type="text/javascript" src="MoveEffect.js"></script>
-                </div>
+            </div>
         </div>
+        <a href="#Nine" class="goto-next scrolly">Next</a>
+    </div>
+</section>
+
+<!-- Nine -->
+<section id="Nine" class="main special">
+    <div class="container">
+        <span class="image fit primary"><img src="images/pic02.jpg" alt=""></span>
+        <div class="content">
+            <header class="major">
+                <h2>What we do?</h2>
+            </header>
+            <p>团队正致力于完善我校的易班网络平台，使之服务于广大老师，学生，让网络环境更加健康，向上。</p>
+            <p>明天的易班，将成为莘莘学子的良师益友，为实现教育的梦想而不懈奋斗！为了更好的易班一起努力！让我们一起期待接下来的易班活动！</p>
         <a href="#footer" class="goto-next scrolly">Next</a>
     </div>
 </section>
@@ -764,7 +777,7 @@
         </ul>
         <ul class="copyright">
             <li>© <a href="http://www.yiban.cn/school/index/id/5370538">UPC yiban</a></li>
-            <li>Design: <a href="http://html5up.net">石大易班技术开发部</a></li>
+            <li>Design:石大易班技术开发部</li>
             <li>University: <a href="http://www.upc.edu.cn/">中国石油大学（华东）</a></li>
         </ul>
     </footer>
