--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <tbody>
                         <tr>
                             <td>部长</td>
-                            <td>网络开发技术高超，统管部内事务</td>
+                            <td>统管部内事务</td>
                             <td>李环宇</td>
                         </tr>
                         <tr>
