简单的增加了现有的视觉设计部，进行了部分人员名字替换

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<!--目前只有电脑端无手机端，各部门信息没有更新，一些小细节错了-->
 <html>
 <head>
     <title>石大易班发展中心</title>
@@ -99,10 +100,15 @@
 
                     <h3><a href="#six" class="button small">技术开发部</a></h3>
                 </li>
+                    <li>
+                        <span class="icon major fa-describe"></span>
+
+                        <h3><a href="#seven"class="button small">视觉设计部</a> </h3>
+                    </li>
                 <li>
                     <span class="icon major fa-pencil"></span>
 
-                    <h3><a href="#seven" class="button small">信息编辑部</a></h3>
+                    <h3><a href="#" class="button small">信息编辑部</a></h3>
                 </li>
             </ul>
         </div>
@@ -134,12 +140,12 @@
                     <tr>
                         <td>主席</td>
                         <td>组织管理能力出众，统管各项工作</td>
-                        <td>李庆</td>
+                        <td>胡松</td>
                     </tr>
                     <tr>
                         <td>执行主席</td>
                         <td>组织沟通能力强，分管四大部门</td>
-                        <td>唐钿钿、丁慧</td>
+                        <td>唐钿钿</td>
                     </tr>
                     <tr>
                         <td>秘书长</td>
@@ -185,17 +191,17 @@
                         <tr>
                             <td>部长</td>
                             <td>组织管理能力出众，统管部内事务</td>
-                            <td>胡松</td>
+                            <td>张丽洁</td>
                         </tr>
                         <tr>
                             <td>人力资源</td>
                             <td>进行人员招聘。培训交流以及考核奖惩</td>
-                            <td>郭防铭、杨储源、刘佳敏</td>
+                            <td>杨储源、刘美含、魏永波</td>
                         </tr>
                         <tr>
                             <td>行政事务</td>
                             <td>进行活动的策划，值班安排以及费用报销</td>
-                            <td>郑佳琳、张欢欢、张丽洁、黄金荣</td>
+                            <td>刘朋博、黄金荣</td>
                         </tr>
                         </tbody>
                     </table>
@@ -232,17 +238,17 @@
                         <tr>
                             <td>部长</td>
                             <td>网站运营经验丰富，统管部内事务</td>
-                            <td>姜南</td>
+                            <td>张文静</td>
                         </tr>
                         <tr>
                             <td>网站管理</td>
                             <td>熟悉网站媒体运作，进行网站运营、公告播发、内容审核</td>
-                            <td>蒋绪涛、张文静、张美玲</td>
+                            <td>徐梦凡、刘云飞、张美玲</td>
                         </tr>
                         <tr>
                             <td>网站服务</td>
                             <td>熟悉各类网络媒体服务，进行专题策划与客户服务</td>
-                            <td>吴雅倩、刘香茹</td>
+                            <td>、刘香茹</td>
                         </tr>
                         </tbody>
                     </table>
