更新了部门人员信息，但是改的页面可读性太差了，明天接着看代码，实现美化。

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="major">
         <h1>石大易班发展中心</h1>
         <p><a href="http://www.yiban.cn/school/index/id/5370538">“石大易班”</a>是中国石油大学（华东）依托教育部<a href="http://www.yiban.cn/">“易班网”</a>建设而成的学生综合互动社区。</p>
-        <p>易班网是高校教育教学，生活服务，文化娱乐的综合性互动社区，为在校师生提供主页定制，在线学习，活动发布，兴趣交友等教育信息化一站式服务功能。</p>
+        <p>易班网是高校教育教学，生活服务，文化娱乐的大学生综合网络互动社区平台，为在校师生提供主页定制，在线学习，活动发布，兴趣交友等教育信息化一站式服务功能。</p>
     </header>
     <div class="container">
         <ul class="actions">
@@ -100,15 +100,15 @@
 
                     <h3><a href="#six" class="button small">技术开发部</a></h3>
                 </li>
-                    <li>
-                        <span class="icon major fa-describe"></span>
+                <li>
+                    <span class="icon major fa-describe"></span>
 
-                        <h3><a href="#seven"class="button small">视觉设计部</a> </h3>
-                    </li>
+                    <h3><a href="#seven" class="button small">视觉设计部</a> </h3>
+                </li>
                 <li>
                     <span class="icon major fa-pencil"></span>
 
-                    <h3><a href="#" class="button small">信息编辑部</a></h3>
+                    <h3><a href="#eight" class="button small">信息编辑部</a></h3>
                 </li>
             </ul>
         </div>
@@ -248,7 +248,7 @@
                         <tr>
                             <td>网站服务</td>
                             <td>熟悉各类网络媒体服务，进行专题策划与客户服务</td>
-                            <td>、刘香茹</td>
+                            <td>华俊、李庆、刘香茹</td>
                         </tr>
                         </tbody>
                     </table>
@@ -268,7 +268,7 @@
             <header class="major">
                 <h2>技术开发部</h2>
             </header>
-            <p>负责石大易班的开发及美工设计。</p>
+            <p>负责石大易班的开发及网站维护。</p>
             <section>
                 <h4>部门分工</h4>
                 <div class="table-wrapper">
@@ -287,14 +287,19 @@
                             <td>李环宇</td>
                         </tr>
                         <tr>
-                            <td>开发维护</td>
-                            <td>熟悉各类编程语言，进行程序开发、系统维护、数据处理</td>
+                            <td>后端</td>
+                            <td>熟悉各类编程语言，进行程序开发、后端编写</td>
                             <td>王泽涛、付振宇、陈奕浩、王浩竣</td>
                         </tr>
                         <tr>
-                            <td>美工设计</td>
-                            <td>精通各类美工软件，进行网页设计、平面设计、界面设计</td>
-                            <td>钟志勇、刘韩艳</td>
+                            <td>前端</td>
+                            <td>熟悉各类前端制作、编写前端可视化页面</td>
+                            <td>王燕妮、张福利</td>
+                        </tr>
+                        <tr>
+                            <td>菜鸟屋</td>
+                            <td>学习各类知识、尽快开始工作</td>
+                            <td>杨储源、王燕妮、陈奕浩</td>
                         </tr>
                         </tbody>
                     </table>
@@ -311,9 +316,9 @@
         <span class="image fit primary"><img src="images/pic01.jpg" alt=""></span>
         <div class="content">
             <header class="major">
-                <h2>信息编辑部</h2>
+                <h2>视觉设计部</h2>
             </header>
-            <p>负责石大易班文字、影像的采写编辑。</p>
+            <p>负责石大易班图片处理、海报、易拉宝设计、宣传材料设计。</p>
             <section>
                 <h4>部门分工</h4>
                 <div class="table-wrapper">
@@ -328,19 +333,12 @@
                         <tbody>
                         <tr>
                             <td>部长</td>
-                            <td>新闻类组织管理经验丰富，统管部内事务</td>
-                            <td>王玉莹</td>
+                            <td>熟悉各总专业软件，统管部内事务</td>
+                            <td>李宁</td>
                         </tr>
-                        <tr>
-                            <td>文字采编</td>
-                            <td>文字功底和编辑能力强大，进行新闻采访、文稿编辑、排版发布</td>
-                            <td>陈映翰、梁良媛、潘一鸣、潘美旭、张林静、郝洁</td>
-                        </tr>
-                        <tr>
-                            <td>影像采编</td>
-                            <td>摄影水平高超，进行新闻配图、摄影摄像、图片处理</td>
-                            <td>黄见智</td>
-                        </tr>
+                        <td>美工设计</td>
+                        <td>精通各类美工软件，进行网页设计、平面设计、界面设计</td>
+                        <td>仲颖、李雪、龚雪、王艺丹、王晓冕</td>
                         </tbody>
                     </table>
                 </div>
@@ -351,6 +349,51 @@
     </div>
 
 </section>
+<!--eight-->
+<section id="eight" class="main special">
+    <div class="container">
+        <span class="image fit primary"><img src="images/pic03.jpg" alt=""></span>
+        <div class="content">
+            <header class="major">
+                <h2>信息采编部</h2>
+            </header>
+            <p>负责石大易班的新闻采写，推文、美文撰写。</p>
+            <section>
+                <h4>部门分工</h4>
+                <div class="table-wrapper">
+                    <table class="alt">
+                        <thead>
+                        <tr>
+                            <th>职务</th>
+                            <th>能力与职责</th>
+                            <th>成员</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>部长</td>
+                            <td>统管部内事务</td>
+                            <td>黄见智</td>
+                        </tr>
+                        <tr>
+                            <td>新闻采写</td>
+                            <td>文笔功底好、写作能力强</td>
+                            <td>朱虹燕、梁良媛、潘美旭、闫凯璐、高豪杰</td>
+                        </tr>
+                        <tr>
+                            <td>摄影</td>
+                            <td>熟练掌握单反等摄影设备、懂得相片的采写</td>
+                            <td>许昂、王洪路</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </div>
+        <a href="#eight" class="goto-next scrolly">Next</a>
+    </div>
+</section>
+
 
 <!--&lt;!&ndash; Eight &ndash;&gt;-->
 <!--<section id="eight" class="main special">-->
