--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section id="header">
     <header class="major">
         <h1>石大易班发展中心</h1>
-        <p><a href="http://www.yiban.cn/school/index/id/5370538">“石大易班”</a>是中国石油大学（华东）依托教育部<a href="http://www.yiban.cn/">“易班网”</a>建设而成的学生综合互动社区。</p>
+        <p><a href="http://www.yiban.cn/school/index/id/5370538">“石大易班”</a>是中国石油大学（华东）依托教育部<a href="http://www.yiban.cn/">“易班网”</a>建设而成的大学生综合网络互动社区。</p>
         <p>易班网是高校教育教学，生活服务，文化娱乐的大学生综合网络互动社区平台，为在校师生提供主页定制，在线学习，活动发布，兴趣交友等教育信息化一站式服务功能。</p>
     </header>
     <div class="container">
