更新了全部，完工。（ps:五个部门的排版很丑，未能解决）

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             </header>
             <p><b>金秋九月，海风送来相识的气息，10月18日，中国石油大学（华东）易班团队正式成立，开启了一段共同实现教育梦想的旅途
             。青春似梦，岁月如歌，一群怀揣理想的青年以易班网为帆，扬帆起航！</b></p>
-            <div class="12u"><span class="image fit"><img src="images/pic08.JPG" alt=""></span></div>
+            <div class="12u"><span class="image fit"><img src="images/pic06.JPG" alt=""></span></div>
             <p><strong>石大易班团队分为以下几个部门</strong></p>
-            <h3><a href="#three" class="button small">主席团</a></h3>
+            <h1><a href="#three" class="button small">主席团</a></h1>
             <ul class="icons-grid">
                 <li>
                     <span class="icon major fa-coffee"></span>
@@ -91,7 +91,7 @@
                     <h3><a href="#four" class="button small">人力行政部</a></h3>
                 </li>
                 <li>
-                    <span class="icon major fa-code"></span>
+                    <span class="icon major fa-bank"></span>
 
                     <h3><a href="#five" class="button small">网络运营部</a></h3>
                 </li>
@@ -101,7 +101,7 @@
                     <h3><a href="#six" class="button small">技术开发部</a></h3>
                 </li>
                 <li>
-                    <span class="icon major fa-describe"></span>
+                    <span class="icon major fa-apple"></span>
 
                     <h3><a href="#seven" class="button small">视觉设计部</a> </h3>
                 </li>
@@ -124,6 +124,7 @@
             <header class="major">
                 <h2>主席团</h2>
             </header>
+            <p>负责易班的决策，引导易班的建设和未来方向。</p>
         </div>
         <section>
             <h4>部门分工</h4>
@@ -208,7 +209,7 @@
                 </div>
             </section>
         </div>
-        <div class="12u"><span class="image fit"><img src="images/pic14.JPG" alt=""></span></div>
+        <div class="12u"><span class="image fit"><img src="images/pic08.JPG" alt=""></span></div>
         <a href="#five" class="goto-next scrolly">Next</a>
     </div>
 </section>
@@ -255,7 +256,7 @@
                 </div>
             </section>
         </div>
-        <div class="12u"><span class="image fit"><img src="images/pic06.JPG" alt=""></span></div>
+        <div class="12u"><span class="image fit"><img src="images/pic09.JPG" alt=""></span></div>
         <a href="#six" class="goto-next scrolly">Next</a>
     </div>
 </section>
@@ -306,6 +307,7 @@
                 </div>
             </section>
         </div>
+        <div class="12u"><span class="image fit"><img src="images/pic10.JPG" alt=""></span></div>
         <a href="#seven" class="goto-next scrolly">Next</a>
     </div>
 </section>
@@ -344,7 +346,7 @@
                 </div>
             </section>
         </div>
-        <div class="12u"><span class="image fit"><img src="images/pic17.JPG" alt=""></span></div>
+        <div class="12u"><span class="image fit"><img src="images/pic11.JPG" alt=""></span></div>
         <a href="#eight" class="goto-next scrolly">Next</a>
     </div>
 
@@ -390,7 +392,7 @@
                 </div>
             </section>
         </div>
-        <a href="#eight" class="goto-next scrolly">Next</a>
+        <div class="12u"><span class="image fit"><img src="images/pic12.JPG" alt=""></span></div>
     </div>
 </section>
 
